@@ -195,6 +195,9 @@ Changes on 1.2.0 since 1.1.0:
     directly on tab label using any wanted gestures and files will end up
     in the folder that tab label points to.
 
+* Added new menu option 'Edit'->'Copy Path(s)' to copy text paths for the
+    selection into clipboard.
+
 
 Changes on 1.1.0 since 1.0.1:
 
